feat: implement comprehensive audit engine, security framework, and frontend dashboard components